fixing an overflow issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -189,6 +189,10 @@ section {
         grid-column: 2 / span 2;
         grid-row: 1 / span 2;
 
+        h1 {
+            font-size: 4rem;
+        }
+
         img {
             width: 40%;
         }
